--- a/要点.md
+++ b/要点.md
@@ -6,3 +6,12 @@
     - 项目预算
     具体项目成员的名字是不会在项目说明书中的，因为在编写需求书的时候往往连执行团队都没有完全确定
         具体人员名单属于人力资源计划或项目团队名录
+
+- 利益相关者是指任何可能影响项目或受项目影响的个人、群体或组织，所以不一定是项目内人员、也可能来自外部
+    从而降低风险，管理多方期望
+
+- 定义项目任务是属于 范围管理Scope Management 或 WBS工作分解结构的范畴
+
+- PBS: Product Breakdown Structure 产品分解结构是项目管理中“基于产品的规划”技术的重要组成部分
+    PBS是一种层级结构，将项目最终要交付的产品、成果物分解为更小的、更抑郁管理的组件，逻辑是“为了得到最终的产品，需要哪些物理零件或中间产物”
+    相比之下，WBS更像是How，而PBS是For What
