feat: Four States

--- a/要点.md
+++ b/要点.md
@@ -13,6 +13,8 @@
 - 定义项目任务是属于 范围管理Scope Management 或 WBS工作分解结构的范畴
 
 - PBS: Product Breakdown Structure 产品分解结构是项目管理中“基于产品的规划”技术的重要组成部分
-    PBS是一种层级结构，将项目最终要交付的产品、成果物分解为更小的、更抑郁管理的组件，逻辑是“为了得到最终的产品，需要哪些物理零件或中间产物”
+    PBS是一种层级结构，将项目最终要交付的产品、成果物分解为更小的、更易于管理的组件，逻辑是“为了得到最终的产品，需要哪些物理零件或中间产物”
     相比之下，WBS更像是How，而PBS是For What
 
+- 在项目澄清阶段中，需求定义的主要目标是什么
+    准确识别并记录项目必须实现的成果以及利益相关者的期望
