--- a/要点.md
+++ b/要点.md
@@ -18,3 +18,11 @@
 
 - 在项目澄清阶段中，需求定义的主要目标是什么
     准确识别并记录项目必须实现的成果以及利益相关者的期望
+    - 对齐目标: 确保项目所有人员对成果的定义达成共识
+    - 范围控制: 只有定义了需求，才能确定项目 范围 Scope ，防止后期出现无休止的 需求蔓延 Scope Creep
+
+- 项目资源管理的核心在于 优化 与 对齐
+    1. 资源获取: 确保在项目的各个阶段，所需的特定技能(人)或设备(物)能够到位，避免因资源短缺导致进度延误
+    2. 效率最大化: 仅仅拥有资源不够，还需要合理分配，防止资源闲置或资源过度使用（导致员工倦怠或设备损坏）
+    3. 目标导向: 服务于项目的整体目标（质量、时间和成本的平衡）
+        例如软开中一般先用普适的技术栈进行快速开发，然后在后期视情况进行性能优化
