--- a/项目管理文件清单.md
+++ b/项目管理文件清单.md
@@ -23,7 +23,7 @@
 | 文件名称 | 法语名称 | 内容用途 |
 |---------|---------|---------|
 | 项目管理计划 | Plan de management du projet | 统筹和指导整个项目的执行与控制 |
-| 范围说明书 | Déclaration du périmètre | 明确项目包含与不包含的内容 |
+| 范围说明书 Scope | Déclaration du périmètre | 明确项目包含与不包含的内容 |
 | 产品分解结构（PBS） | Structure de découpage du produit (PBS) | 将最终产品逐层分解为子产品 |
 | 工作分解结构（WBS） | Structure de découpage du travail (WBS) | 将项目工作分解为可管理的工作包 |
 | WBS 字典 | Dictionnaire de la WBS | 详细说明每个工作包的内容和责任 |
