--- a/要点.md
+++ b/要点.md
@@ -26,3 +26,13 @@
     2. 效率最大化: 仅仅拥有资源不够，还需要合理分配，防止资源闲置或资源过度使用（导致员工倦怠或设备损坏）
     3. 目标导向: 服务于项目的整体目标（质量、时间和成本的平衡）
         例如软开中一般先用普适的技术栈进行快速开发，然后在后期视情况进行性能优化
+    - 根据布鲁克斯法则，向进度落后的项目增加人手可能会使其更加落后（例如沟通成本等等的影响）
+    - 资源管理是关于预算的合理利用，不能盲目削减预算
+    - 资源管理涵盖所有类型的任务，包括行政、管理、沟通等，而不仅仅是技术任务
+
+- 关键资源："关键" - 瓶颈效应、时间约束
+    缺乏灵活性: 一般100%占用，没有任何缓冲时间
+    直接影响工程终期
+
+- 关键路径是由关键任务连成的（一条或多条）
+    关键任务是指只要延误就会影响工程总工期的，也就是总时差为0的
