--- a/要点.md
+++ b/要点.md
@@ -34,5 +34,25 @@
     缺乏灵活性: 一般100%占用，没有任何缓冲时间
     直接影响工程终期
 
-- 关键路径是由关键任务连成的（一条或多条）
+- 关键路径是由关键任务连成的（一条或多条）- 2
     关键任务是指只要延误就会影响工程总工期的，也就是总时差为0的
+
+- 哪种工具常用于可视化人力资源在不同任务上的分配，并识别潜在的冲突
+    可视化-甘特图Gantt
+        甘特图通过时间轴展示任务，清晰地标出每项任务由谁负责，点那个一个人在同一段时间被分配了两个重叠的任务时，甘特图能直观地显示出资源过度分配的冲突
+
+- “资源平衡”nivellement 与 “资源平滑”lissage 的主要区别是什么
+    - 资源平滑 - 时间受限
+        旨在遵守项目截止日期且不超出资源闲置
+        核心：完工日期（关键路径）是第一位的，不能变
+        仅在任务的浮动时间范围内调整任务，使得资源的需求量尽可能平稳，避免大起大落
+        项目的完工日期不会变、关键路径不会变，无法解决所有资源冲突，因为它受限于浮动时间
+        （浮动时间
+            - 总时差 Total Float TF
+            - 自由时差 Free Float FF
+        ）
+    - 资源平衡 - 资源受限
+        是在重新分配现有资源避免超负荷
+        核心逻辑是“资源是第一位的”，如果需求超过了供应
+        结果虽然确保了任何时间资源需求都不会超过上限，但是会导致项目关键路径变化，通常会推迟项目的完工日期
+
