--- a/要点.md
+++ b/要点.md
@@ -56,3 +56,12 @@
         核心逻辑是“资源是第一位的”，如果需求超过了供应
         结果虽然确保了任何时间资源需求都不会超过上限，但是会导致项目关键路径变化，通常会推迟项目的完工日期
 
+- 优先级
+    1. 工期 Duree 是第一优先级
+    2. 资源利用率 Taux
+    3. 工作量 Charge
+
+工期 = 工作量 / 资源利用率
+
+- 当用户修改一个变量时，在不同的 fixe 固定类型下系统会自动调整哪一个来保持上面式子平衡
+    当 Charge-Taux fixes 也就是固定工作量和利用率的时候，如果修改了 Duree ，那么就得不得不优先调整 Taux 利用率
