--- a/要点.md
+++ b/要点.md
@@ -65,3 +65,9 @@
 
 - 当用户修改一个变量时，在不同的 fixe 固定类型下系统会自动调整哪一个来保持上面式子平衡
     当 Charge-Taux fixes 也就是固定工作量和利用率的时候，如果修改了 Duree ，那么就得不得不优先调整 Taux 利用率
+
+# 2
+
+PERT
+Program Evaluation and Review Technique 计划评审技术
+    用于在不确定环境下估算项目活动工期、分析进度风险
