--- a/要点.md
+++ b/要点.md
@@ -68,6 +68,21 @@
 
 # 2
 
-PERT
-Program Evaluation and Review Technique 计划评审技术
+进度安排 ordonnancement 是作业层面的计划 - 操作性计划
+其特点是使用两种互补的技术
+    1. GANTT 甘特图
+    2. PERT
+    Program Evaluation and Review Technique 计划评审技术
     用于在不确定环境下估算项目活动工期、分析进度风险
+
+    资源、约束 -> GANTT -> 工作日历/施工进度表
+    工期、任务 -> PERT -> 项目最短工期
+
+    GANTT 侧重资源、约束和时间安排，输出可执行的进度计划
+    PERT（关键路径） 侧中任务之间的逻辑关系和工期计划，用来求项目的最短完成时间
+
+八格表示：
+| 最早结束 | 最迟结束 |
+| 任务名 | 工期 |
+| 最早开始 | 最迟开始 |
+| 自由时差 | 总时差 |
