--- a/要点.md
+++ b/要点.md
@@ -86,3 +86,32 @@
 | 任务名 | 工期 |
 | 最早开始 | 最迟开始 |
 | 自由时差 | 总时差 |
+
+注意！最早开始、最早完成、最迟开始、最迟完成、工期分别为 a1, a2, b1, b2, t 的时候
+    a2-a1 = b2-b1 = t-1
+
+示范：
+1 -> 2 -> 3
+
+1.
+| a | |
+| | |
+| | |
+| | |
+2.
+| a+k | |
+| | k |
+| a+1 | |
+| | |
+
+;
+3.
+| | f |
+| | q |
+| | f-q+1 |
+| | |
+2.
+| | f-q |
+| | k |
+| | f-q-k+1 |
+| | |
