--- a/要点.md
+++ b/要点.md
@@ -65,8 +65,9 @@
 
 - 当用户修改一个变量时，在不同的 fixe 固定类型下系统会自动调整哪一个来保持上面式子平衡
     当 Charge-Taux fixes 也就是固定工作量和利用率的时候，如果修改了 Duree ，那么就得不得不优先调整 Taux 利用率
+    这是因为题目信息 Charge-Taux 的顺序表明了 Taux 的优先级比 Charge 低，如果是 Taux-Charge 的话就是 Taux 优先级高、先动 Charge
 
-# 2
+# 2 进度安排
 
 进度安排 ordonnancement 是作业层面的计划 - 操作性计划
 其特点是使用两种互补的技术
@@ -115,3 +116,23 @@
 | | k |
 | | f-q-k+1 |
 | | |
+
+# 3 计算与分析项目盈利性
+
+## 基本概念
+
+- 盈亏平衡点 SR ：企业收支平衡的最低营业额
+- 营业额 CA ：企业年度总销售额
+- 费用
+    - 固定费用 CF ：不衰活动水平变化的费用，例如租金、薪资、保险等等
+    - 可变费用 CV ：随生产量成比例变化的费用，例如原材料、部分能源
+
+## 计算步骤
+1. 确定固定费用
+2. 确定可变费用
+3. 确定历史营业额去年的 CA
+4. 可变成本利润：MCV = CA - CV
+5. 可变成本利润率：TMCV = MCV / CA
+6. 盈亏平衡点 SR = CF / TMCV
+7. 死点天数 PM = SR / (年度CA/360)
+    达到平衡所需的天数
