--- a/要点.md
+++ b/要点.md
@@ -124,8 +124,8 @@
 - 盈亏平衡点 SR ：企业收支平衡的最低营业额
 - 营业额 CA ：企业年度总销售额
 - 费用
-    - 固定费用 CF ：不衰活动水平变化的费用，例如租金、薪资、保险等等
-    - 可变费用 CV ：随生产量成比例变化的费用，例如原材料、部分能源
+    - 固定费用 CF - Fixes ：不衰活动水平变化的费用，例如租金、薪资、保险等等
+    - 可变费用 CV - Variables ：随生产量成比例变化的费用，例如原材料、部分能源
 
 ## 计算步骤
 1. 确定固定费用
@@ -134,5 +134,5 @@
 4. 可变成本利润：MCV = CA - CV
 5. 可变成本利润率：TMCV = MCV / CA
 6. 盈亏平衡点 SR = CF / TMCV
-7. 死点天数 PM = SR / (年度CA/360)
-    达到平衡所需的天数
+7. 死点天数 PM = SR / (年度CA/360) // 达到平衡所需的天数
+    死点数量 = SR / 产品单价 // 达到平衡的所卖产品数
