--- a/要点.md
+++ b/要点.md
@@ -136,3 +136,20 @@
 6. 盈亏平衡点 SR = CF / TMCV
 7. 死点天数 PM = SR / (年度CA/360) // 达到平衡所需的天数
     死点数量 = SR / 产品单价 // 达到平衡的所卖产品数
+
+## 注意点
+- 帮助评估绩效、设定销售目标、优化成本（例如降低CF以缩小SR）
+- 有局限性，因为是基于的往年数据CA，适用于稳定业务不适合季节性波动的
+- 在商业计划中要先算 SR 再构建完整财务模型
+
+## 主要财务文件
+- 损益表
+    用于反映公司在特定时期内的经营成果（利润或亏损）
+    - 收入：公司通过销售商品或提供服务获得的收入
+    - 费用：为产生收入而发生的各项支出
+- 资产负债表
+    - 资产：公司拥有的资源
+    - 负债：公司的资金来源，包括自有资金和债务
+通过财务文件对创业进行数字化管理，从而实现收入 Produits 覆盖成本 Charges 的盈利的目的
+损益表是动态的，记录一段时间内的流入与流出
+资产负债表是静态的，表示某一特定时刻公司的财务状况
