--- a/要点.md
+++ b/要点.md
@@ -117,9 +117,11 @@
 | | f-q-k+1 |
 | | |
 
-# 3 计算与分析项目盈利性
+# 3 财务
 
-## 基本概念
+## 3.1 计算与分析项目盈利性
+
+### 基本概念
 
 - 盈亏平衡点 SR ：企业收支平衡的最低营业额
 - 营业额 CA ：企业年度总销售额
@@ -127,7 +129,7 @@
     - 固定费用 CF - Fixes ：不衰活动水平变化的费用，例如租金、薪资、保险等等
     - 可变费用 CV - Variables ：随生产量成比例变化的费用，例如原材料、部分能源
 
-## 计算步骤
+### 计算步骤
 1. 确定固定费用
 2. 确定可变费用
 3. 确定历史营业额去年的 CA
@@ -137,19 +139,38 @@
 7. 死点天数 PM = SR / (年度CA/360) // 达到平衡所需的天数
     死点数量 = SR / 产品单价 // 达到平衡的所卖产品数
 
-## 注意点
+### 注意点
 - 帮助评估绩效、设定销售目标、优化成本（例如降低CF以缩小SR）
 - 有局限性，因为是基于的往年数据CA，适用于稳定业务不适合季节性波动的
 - 在商业计划中要先算 SR 再构建完整财务模型
 
-## 主要财务文件
+## 3.2 主要财务文件
 - 损益表
     用于反映公司在特定时期内的经营成果（利润或亏损）
     - 收入：公司通过销售商品或提供服务获得的收入
     - 费用：为产生收入而发生的各项支出
+    => 盈利利润、净利润
+    项目盈利率：投入资本与产出利润之间的比例
 - 资产负债表
     - 资产：公司拥有的资源
     - 负债：公司的资金来源，包括自有资金和债务
 通过财务文件对创业进行数字化管理，从而实现收入 Produits 覆盖成本 Charges 的盈利的目的
 损益表是动态的，记录一段时间内的流入与流出
 资产负债表是静态的，表示某一特定时刻公司的财务状况
+
+## 3.3 融资
+financement 为确保项目在整个生命周期内顺利实施而筹集、分配和管理所需资金的过程
+1. 钱从哪里来 - 资金来源
+2. 什么时候需要 - 现金流时间安排
+3. 如何使用与控制 - 预算和成本控制
+
+- 公司资金来源
+    - 自由资金：创业者的个人出资、合伙人投资、留存收益
+    - 外部融资：
+        - 银行贷款
+        - 天使投资或风险投资
+        - 政府补贴
+- 融资策略
+    1. 明确需求：融资前需精确计算所需的设备投资和营运资金
+    2. 盈利能力证明：损益表 向出资方证明项目具备盈利潜力的关键
+    3. 可持续性：合理的资产负债结构和稳健的现金流规划
