--- a/要点.md
+++ b/要点.md
@@ -331,3 +331,45 @@ RMI = 参数1的影响等级 * 参数2的影响等级
 标出点后画了点到两轴的垂直线
 第一张图是局部的，
 第二场图是全局的
+
+有时候还会用节点的圆圈半径大小表示对目标的影响
+
+# 6
+
+## 什么是项目
+为了实现一个创新性想法而进行的临时努力
+- 三大特征
+1. 临时性
+2. 阶段性
+3. 结果导向
+
+流程是重复、持续的
+项目是唯一的、有终点的
+
+## 项目成果三要素
+1. 目标/质量：达到预期的技术标准
+2. 成本：控制在预算范围内
+3. 时间：按时交付
+
+## 参与者
+- MOA：提供资金的人，相当于客户
+- MOE：承接方、负责具体实现和技术方案
+- Parties Prenantes 利益相关者：受项目影响或能影响项目的个人或组织
+
+## 生命周期
+1. 澄清阶段 Clarification
+2. 组织阶段 Organisation
+3. 实施阶段 Realisation
+4. 结项阶段 Cloture
+
+## 结构化工具
+- PBS: For What
+
+- WBS: How
+
+任务拆分原则 - 三一律：单一行动、单一地点、单一时间
+
+## 目标 vs 约束
+Objectif：想实现的成果
+
+Contrainte: 外部施加的、必须遵守的限制
