--- a/要点.md
+++ b/要点.md
@@ -373,3 +373,46 @@ RMI = 参数1的影响等级 * 参数2的影响等级
 Objectif：想实现的成果
 
 Contrainte: 外部施加的、必须遵守的限制
+
+## 第二周
+
+### 进度管理流程
+
+1. 定义活动
+2. 排列活动顺序
+3. 识别资源
+4. 估算工期
+5. 制定进度表
+6. 监控进度
+
+### 定义活动的原则
+
+三一律
+    行动统一
+    地点统一
+    时间统一
+
+滚动式规划
+专家判断
+
+### 任务之间的四种逻辑关系
+D - Debut开始 ， F - Fin结束
+1. FD ：A结束，B才能开始
+2. DD
+3. FF
+4. DF
+
+### 活动属性与RACI模型
+每项活动在定义完成后应包含：ID、名称、描述、前置/后置任务、逻辑关系、所需资源、
+约束条件以及 RACI 矩阵
+RACI模型是用于区分义务的工具
+- R 执行者
+- A 负责人
+- C 咨询对象
+- I 知情者
+
+## 排程算法：等级法
+也就是 Kahn 拓扑排序
+不断找出入度为0的节点然后松弛
+
+## 
