fix: should be accountable

--- a/要点.md
+++ b/要点.md
@@ -415,4 +415,15 @@ RACI模型是用于区分义务的工具
 也就是 Kahn 拓扑排序
 不断找出入度为0的节点然后松弛
 
-## 
+## 工作量与工期
+资源冲突的识别与平滑
+1. 资源直方图
+例如一周共有三个任务同时进行，分别需要2，1，2
+    那么总负荷就是5人
+    如果公司只有4人，那么就是冲突
+
+2. 平滑 Lissage：不准动结束日期。找那些有浮动时间的非关键任务，将他们后挪、避开高峰期
+    均衡 Nivellement：资源第一，如果资源实在不够，只能工期靠后
+
+## RACI矩阵的黄金法则
+每个任务只能有一个 A Approver：如果一个任务有两个 A 那么责任就会推脱；如果没有 A，任务就没有人负责
