--- a/要点.md
+++ b/要点.md
@@ -426,4 +426,18 @@ RACI模型是用于区分义务的工具
     均衡 Nivellement：资源第一，如果资源实在不够，只能工期靠后
 
 ## RACI矩阵的黄金法则
-每个任务只能有一个 A Approver：如果一个任务有两个 A 那么责任就会推脱；如果没有 A，任务就没有人负责
+R干活，A背锅
+
+每个任务只能有一个 A Accountable：如果一个任务有两个 A 那么责任就会推脱；如果没有 A，任务就没有人负责
+R可以有多个，多人干活
+
+Jalon(milestone) 里程碑 工期为0，标志重要阶段的结束，例如合同签署
+Livrable 交付物 阶段结束必须拿出东西，如报告、代码、圆形
+Antecedent 前置任务 在 PERT 图中排在箭头后面的任务
+Marge Libre 自由时差 不影响下一个任务最早开始的延迟时间
+Graphe Potentiel Tache 任务节点图 画 PERT 时用的“框框代表任务“的图
+Couts fixes variables 固定成本 买机器是固定成本，人工费是变动成本
+
+## 第六周
+
+### 
