--- a/要点.md
+++ b/要点.md
@@ -440,4 +440,66 @@ Couts fixes variables 固定成本 买机器是固定成本，人工费是变动
 
 ## 第六周
 
-### 
+### 计算
+顺推得最早
+    注意如果有多个前序最早，那么取最晚的那个
+
+逆推得最晚
+    如果有多个后继，取最早的那个
+
+同时注意
+    最早结束-最早开始 = 最迟结束-最迟开始 = 工期-1 （因为开始的那一天是算在工期中的）
+
+### 时差
+总时差 = 最晚开始 - 最早开始 = 最晚结束 - 最早结束
+    在不推迟项目整体结束时间的前提下，该任务可以延误的时间
+
+自由时差 = 后继任务最早开始 - 最迟结束
+    在不影响任何后继任务最早开始日期的前提下，该任务可以延误的时间
+
+### 关键路径
+所有总时差 = 0 的任务集合
+- 关键路径是项目网络图中最长的路径（工期之和最大）
+- 关键路径上任意延迟都会导致整个项目的延迟
+- 一个项目可以有多条关键路径
+
+Graphe potentiel tache 任务节点图
+Antecedent / Predecesseur 前置任务
+Successeur 后续任务
+Date au plus tot 最早日期
+Date au plus tard 最晚日期
+Marge 时差 - 浮动时间
+    TF: Total Float
+    FF: Free Float
+Chemin critique 关键路径
+
+## 人力管理 - 软性、组织、预防职场压力
+- Staff Acquisition 人员获取
+    获取项目所需的各类人力资源（内部调配活外部招聘）
+- Team Development 团队建设
+    提高团队成员的技能，促进团队协作，增强项目表现
+
+### 心理社会风险 Les Risques Psychosociaux - RPS
+RPS 是指会对员工健康（生理、心理、社会性）产生负面影响的风险，通常由工作组织和管理方式引起
+
+- 三大表现形式
+    1. 压力：工作要求与个人资源不匹配产生
+    2. 职场暴力：内部暴力（骚扰、冲突）和外部暴力（客户）
+    3. 职场倦怠：长期的精神疲劳
+
+卡拉塞克模型
+通过两个维度评估工作压力
+1. 工作要求：工作量、复杂程度、时间压力
+2. 决策自主度：员工对工作的控制权、技能的使用
+高要求 + 低自主度 = 高压力、高风险，如果再加上“社会支持”不足，风险会进一步放大
+
+预防的三个等级
+1. 一级预防：消除风险源、修改组织架构、减轻工作负荷（最有效）
+2. 二级预防：帮助员工应对压力，如培训、压力管理课程
+3. 三级预防：治疗受害者，如心理辅导、协助回归岗位
+
+### 管理者的角色
+病态管理带来的风险 - 滥用权力
+1. 滥用从属关系：将劳动契约变成纯粹的权力压迫
+2. 滥用惩戒规则：过度监督、取消必要的沟通工具（如断开内网）
+3. 滥用指挥权：任意修改工作组织结构，使员工的工作变得不可见或失去意义
