--- a/要点.md
+++ b/要点.md
@@ -523,3 +523,28 @@ Karasek 模型图
 ### 压力与骚扰
 - 压力是来自“事情”本身
 - 骚扰是来自“人”对你的不当对待
+
+## 传统项目管理与敏捷开发的对比
+从“计划驱动”到“价值驱动”的思维转变
+
+传统的是分为固定阶段，只有在最后阶段才会验收
+但是这就像 初代的React 一样无法中断 导致用户（客户）感知不好，如果执行方理解有误再去修改就晚了
+
+敏捷宣言（fiber）
+1. 个体与互动 高于 过程与工具
+2. 可工作的软件 高于 详尽文档
+3. 客户合作 高于 合同谈判
+4. 相应变化 高于 遵循计划
+
+### Scrum框架
+Scrum 是敏捷开发的一种具体实现
+1. 三大角色
+    PO 产品负责人：代表客户，决定做什么，维护产品代办列表
+    SM 敏捷教练：负责流程、消除障碍、确保团队高效工作
+    DT 开发团队：跨职能团队，负责怎么做并交付成果
+
+2. 核心仪式
+    Sprint 冲刺：一个固定时长的迭代周期
+    Daily Meeting 每日站会、同步进展
+    评审会：向客户展示增量成果
+    回顾会：团队内部总结
