--- a/要点.md
+++ b/要点.md
@@ -580,3 +580,19 @@ FF: Free Float 自由时差 - Marge Libre
     任务
     里程碑
     依赖关系
+
+# 8
+## Bilan 负债表
+反映企业有什么、欠什么
+资产、负债、资本
+
+## Compte de resultat
+achats 采购 - 
+charges 开支 - 
+taxes 税费 - 
+remuneration 薪水 -
+remises 折扣
+    remises accordees sur ventes 销售折扣 - 
+    remises obtenues sur achats 采购折扣 +（减少成本）
+ventes de marchandises 商品销售收入 +
+produits 收入 +
