fix: SR = CF / TMCV

--- a/要点.md
+++ b/要点.md
@@ -139,6 +139,9 @@
 7. 死点天数 PM = SR / (年度CA/360) // 达到平衡所需的天数
     死点数量 = SR / 产品单价 // 达到平衡的所卖产品数
 
+TMCV 边际贡献率 Taux de marge sur couts variables
+SR 盈亏平衡点 Seuil de rentabilite
+
 ### 注意点
 - 帮助评估绩效、设定销售目标、优化成本（例如降低CF以缩小SR）
 - 有局限性，因为是基于的往年数据CA，适用于稳定业务不适合季节性波动的
