--- a/要点.md
+++ b/要点.md
@@ -520,8 +520,11 @@ Karasek 模型图
 ### 管理者的角色
 病态管理带来的风险 - 滥用权力
 1. 滥用从属关系：将劳动契约变成纯粹的权力压迫
+    核心是借助等级地位，对员工实施人格羞辱、情感压迫等针对性伤害。
 2. 滥用惩戒规则：过度监督、取消必要的沟通工具（如断开内网）
+    核心是借纪律制度、监督权限、纪律文书等手段，实施超出合理范围的管控或施压。
 3. 滥用指挥权：任意修改工作组织结构，使员工的工作变得不可见或失去意义
+    核心是不合理利用工作安排、人事调整、信息管理、指令传递等组织管理职权。
 
 ### 压力与骚扰
 - 压力是来自“事情”本身
