--- a/要点.md
+++ b/要点.md
@@ -602,3 +602,29 @@ remises 折扣
     remises obtenues sur achats 采购折扣 +（减少成本）
 ventes de marchandises 商品销售收入 +
 produits 收入 +
+
+# 财务可行性分析
+
+一. 财务数据整理
+1. 资金来源
+
+2. 初始投资
+    年折旧率 = 年投资额 / 年数
+
+3. 年度运营支出
+
+二. 问题
+1. 会进行哪些分析？
+    1. 盈亏平衡点
+    2. 现金流
+    3. 损益表
+
+
+分析角度
+1. 利润角度
+2. 现金流角度
+
+千万别忘记折旧 Amortissement
+    虽然不是现金支出，但会计入成本，影响利润
+
+利润是负的，但是如果算上折旧回流现金流可能是正的
